fixed width flicker while resizing

--- a/src/components/apps/file-explorer/folder-contents/FileExplorerFolderContents.css
+++ b/src/components/apps/file-explorer/folder-contents/FileExplorerFolderContents.css
@@ -20,10 +20,10 @@
 }
 
 .folder-contents-resize {
+  position: absolute;
   width: 5px;
   height: 100%;
-  position: absolute;
   top: 0;
-  left: -2.5px;
+  left: 0;
   cursor: w-resize;
 }
