--- a/src/components/apps/file-explorer/folder-contents/column-heading/ColumnHeading.css
+++ b/src/components/apps/file-explorer/folder-contents/column-heading/ColumnHeading.css
@@ -18,7 +18,7 @@
   width: 5px;
   height: 100%;
   position: absolute;
-  right: -2.5px;
+  right: -2.4px;
   top: 0;
   cursor: w-resize;
 }
